<resources>
    <string name="app_name">fragment lab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AddRecord">Add Record </string>
    <string name="Search">Search Record</string>
    <string name="msgR">Please Select the Appropriate Action
    </string>
    <string name="SaveBtn">Save</string>
    <string name="name">Enter Name</string>
    <string name="email">Enter E-mail</string>
    <string name="address">Enter Address</string>
    <string name="Age">Enter Age</string>

</resources>